new endpoints and docs
