# src/controllers/ProductController.js
@@ -101,10 +101,23 @@ const updateProductName = async (req, res) => {
   }
 };
 
+const getAllProducts = async (req, res) => {
+  try {
+    const products = await productService.getAllProducts();
+    res.status(200).json(products);
+  } catch (error) {
+    res.status(400).json({
+      message: "Error al obtener los productos",
+      error: error.message,
+    });
+  }
+};
+
 module.exports = {
   addProductToBranch,
   deleteProductFromBranch,
   updateProductStock,
   getTopStockedProductsByFranchise,
   updateProductName,
+  getAllProducts,
 };
