# src/routes/ProductRoutes.js
@@ -5,6 +5,7 @@ const {
   updateProductStock,
   getTopStockedProductsByFranchise,
   updateProductName,
+  getAllProducts,
 } = require("../controllers/ProductController");
 const router = express.Router();
 
@@ -13,5 +14,6 @@ router.delete("/:productId", deleteProductFromBranch);
 router.put("/:productId/stock", updateProductStock);
 router.get("/top-stocked/:franchiseId", getTopStockedProductsByFranchise);
 router.put("/:productId", updateProductName);
+router.get("/", getAllProducts);
 
 module.exports = router;
